# 112-ntu-dorm-waitlist

./: .editorconfig  README.md  history.json  index.html
.github/workflows/: pages-build-deployment.yml  static.yml  update-history.yml
docs/: history.json  index.html
scripts/: fetch.py  pyproject.toml
site/: history.json  index.html
