[tool.poetry]
name = "ntu-dorm"
version = "0.1.0"
description = ""
authors = ["Alan-Kuan <kuanhaoan@gmail.com>"]
readme = "README.md"
packages = [{include = "ntu_dorm"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
